main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "vps" {
  ami           = "ami-0c02fb55956c7d316"  # AMI Amazon Linux 2
  instance_type = "t2.micro"

  tags = {
    Name = "VPS-Terraform"
  }
}
